@@ -1,3 +1,12 @@
+2008-01-23  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* ConstructorShouldNotCallVirtualMethodsTest.cs: Add a bunch
+	of test cases to exclude final, include non-virtual calls leading
+	to virtual calls, instance versus member/field calls...
+	* EqualShouldHandleNullArgTest.cs: Add a bunch of test cases
+	to duplicate common patterns (from class lib) leading to false 
+	positives.
+
 2008-01-14  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* ConstructorShouldNotCallVirtualMethodsTest.cs: New. Unit 
